app/assets/stylesheets/modules/map/map.css.scss
@import "leaflet-0.7/leaflet.css.scss";
@import "leaflet.draw-0.2.2/leaflet.draw.css.scss";

.leaflet-container {
  background-color: #000;
}

.leaflet-popup-content-wrapper, .leaflet-popup-tip {
  background: #222;
  border: 1px solid #888;
  color: #fff;
}

// Putting a white border around the tooltip, we need to erase the portion
// of the border that appears above the tooltip arrow.  So hacky.
.leaflet-popup-content-wrapper:after {
  display: block;
  color: transparent;
  position: absolute;
  content: '-';
  left: 50%;
  margin-left:-10px;
  bottom:20px;
  width: 19px;
  height: 1px;
  background: #222;
}

.projection-geo .projection-only-arctic,
.projection-geo .projection-only-antarctic,
.projection-arctic .projection-only-geo,
.projection-arctic .projection-only-antarctic,
.projection-antarctic .projection-only-geo,
.projection-antarctic .projection-only-arctic {
  display: none;
}

.map-tooltip {
  position: absolute;
  z-index: 1000;
}

.map-tooltip-content {
  background-color: #222;
  border-radius: 3px;
  border: 1px solid #888;
  box-shadow: 3px 3px 5px rgba(0, 0, 0, .5);
  color: #fff;
  right: 3em;
  bottom: 10em;
  padding: .5em;
  max-width: 20em;
  min-width: 10em;
}

.map-tooltip-action {
  color: #00ffff;
  font-size: .9em;
  text-align:center;
}

.granule-details-container {
  max-width: 700px;
  min-width: 200px;
}

.map-popup-pane {
  border: 1px solid #333;
  background: #111;
  width: 100%;
  text-align: center;
  white-space: nowrap;
}

p.map-popup-info {
  margin: 0;
}

.map-popup-pane-item {
  white-space: normal;
  display: inline-block;
  vertical-align: top;
  margin: 8px 8px 8px 0;
  &:first-child { margin: 8px; }

  width: 182px;
  height: 182px + 48px; /* 4em */
  background-color: #222;
  border: 1px solid #333;
  position: relative;

  .map-popup-pane-label {
    position: absolute;
    line-height: 1.5em;
    height: 48px; /* 4em */
    width:100%;
    margin:0;
    padding:.5em;
    z-index: 1;
  }
}

.map-popup-pane-more {
  width: 182px;
  display: inline-block;
}

.map-popup-pane-x {
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
}

.browse-thumbnail {
  position: absolute;
  display: block;
  top: 53px; /* 5px margin */
  left: 5px;
}

#map img.browse-thumbnail {
  // Leaflet sets this to none !important, and the browse scaler doesn't
  // always respect the values we send.  If there are problems generating
  // the image, it'll come back as 200px despite us asking for 170px.
  max-width: 170px !important;
  max-height: 170px !important;
}


.browse-thumbnail-none {
  width: 100%;
  padding: 50px 0;
}

.geojson-formats {
  font-size: .8em;
}

.geojson-svg {
  stroke-width: 1;
  stroke: #f80;
  fill-opacity: 0;

  &:hover {
    fill: #00C322;
    stroke: #00C322;
    fill-opacity: .5;
  }
}

.geojson-icon {
  opacity: .3;

  &:hover {
    opacity: 1;
  }
}

.geojson-help {
  display: none;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
  z-index: 59;
  background-color: rgba(255, 255, 255, 0.75);
}

.geojson-help-dropzone {
  display: none;
  border: 5px dashed #eee;
  background: #fff;
  width: 30em;
  border-radius: 1em;
  margin: 5em auto 0;
  padding: 1em;
  font-size: 1.5em;

  p {
    margin: 1em 0;
  }

  ul {
    list-style: disc inside;
  }
}

.is-geojson-help-visible {
  .geojson-help, .geojson-help-dropzone {
    display: block;
  }
}

.dz-drag-hover {
  .geojson-help {
    background-color: rgba(200, 255, 200, 0.75);
  }

  .geojson-help-dropzone {
    border: 5px dashed #afa;
    background: #efe;
  }
}

.dropzone {
  border: none;
  border-radius: 0;

  .dz-filename {
    height: 2em;
  }

  .dz-preview {
    position: absolute;
    right: 1em;
    bottom: 10em;

    .dz-details {
      width: 150px;
      height: auto;
    }
  }
}

.leaflet-top, .leaflet-bottom {
  z-index: 58;
}

.granule-spatial-label {
  white-space: nowrap;
  font-size: 1.2em;
  color: #ffffff;
  text-align: center;
  text-shadow: 1px 1px 1px #000;

  // Need to override styles placed on the icon by leaflet
  width: 40em !important;
  margin-left: -20em !important;

  i.fa-stack-2x {
    color: rgba(255,255,255, 0.2);
    @include transition(color 0.3s ease-in-out);
  }

  a {
    padding: 0 0 0 10px;
    color: #fff;
    text-shadow: none;

    &:hover i.fa-stack-2x {
      opacity: .9;
      color: rgba(231, 76, 60, 0.9);
    }
  }

  &:focus {
    outline: none;
  }
}

.granule-browse {
  position: absolute;
  z-index: 49;
  right: 20px;
  bottom: 140px;
  border: 1px solid rgba(255,255,255,.6);

  &.busy {
    width: 256px;
    height: 256px;
    background-color: #222;

    img {
      display: none;
    }
  }

  a {
    display: block;
  }
}

// Anchor point for help
#map-center {
  width: 1px;
  height: 1px;
  position: absolute;
  left: 80%;
  top: 50%;
}

.is-master-overlay-parent-hidden + #map #map-center {
  left: 70%;
}

.is-hidden + #map #map-center {
  left: 50%;
}

.map-grid-search {
  color: #fff;
  background-color: #111;
  border-radius: 5px;
  padding:.2em .5em;
  position: absolute;
  right: 1em;
  bottom: 1em;
  z-index: 100;
  font-size: .8em;

  input {
    padding: 0;
    width:20em;
  }

  a {
    color: #fff;
    padding: 3px 10px;
  }
}

.map-grid-hint {
  display:block;
  text-align:right;
  padding-top:.2em;
}

